[gd_scene load_steps=4 format=3 uid="uid://q5wsur6nux7b"]

[ext_resource type="Script" path="res://levels/PrivacyPolicyAgreement.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dc01qx7uo34s6" path="res://img/background_gray.png" id="2"]
[ext_resource type="Theme" uid="uid://ehwqj083d4h" path="res://theme/general_theme.tres" id="3_f3gbq"]

[node name="PrivacyPolicy" type="Node2D"]
script = ExtResource("1")

[node name="background_blue" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-1, 0)
texture = ExtResource("2")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_top = 120.0
offset_right = 1080.0
offset_bottom = 461.0
theme = ExtResource("3_f3gbq")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "To play you need to read and agree with our"

[node name="PrivacyAgreement" type="LinkButton" parent="VBoxContainer"]
layout_mode = 2
text = "privacy policy"
uri = "https://raw.githubusercontent.com/beothorn/tingting/main/privacy_policy.txt"

[node name="play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Agree"

[connection signal="pressed" from="VBoxContainer/PrivacyAgreement" to="." method="_on_PrivacyAgreement_pressed"]
[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_play_pressed"]
